# GBC_ML2_Task4_Summarization

./: Summarization.ipynb  pyproject.toml  summary_comparison.txt
